--- a/GIP/GIP.csproj
+++ b/GIP/GIP.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="OpenTK, Version=3.1.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
       <HintPath>..\packages\OpenTK.3.1.0\lib\net20\OpenTK.dll</HintPath>
     </Reference>
@@ -149,6 +152,12 @@
     </Compile>
     <Compile Include="Core\ImageProcessTask.cs" />
     <Compile Include="Core\ImageProcessTaskRunner.cs" />
+    <Compile Include="IO\JsonConverter\JsonTexturePixelInitializerConverter.cs" />
+    <Compile Include="IO\JsonSerializable.cs" />
+    <Compile Include="IO\NewtonsoftJsonExtensions.cs" />
+    <Compile Include="IO\Project\JsonProjectFile.cs" />
+    <Compile Include="IO\Project\JsonTextureInitializer.cs" />
+    <Compile Include="IO\Project\JsonTexturePixelInitializer.cs" />
     <Compile Include="Core\ShaderResourceInitializers.cs" />
     <Compile Include="Core\ShaderResources.cs" />
     <Compile Include="Core\TextureInitializerList.cs" />
