--- a/GIP/GIP.csproj
+++ b/GIP/GIP.csproj
@@ -153,8 +153,11 @@
     <Compile Include="Core\ImageProcessTask.cs" />
     <Compile Include="Core\ImageProcessTaskRunner.cs" />
     <Compile Include="IO\Json\Converter\JsonTexturePixelInitializerConverter.cs" />
+    <Compile Include="IO\Json\Converter\JsonUniformVariableValueConverter.cs" />
     <Compile Include="IO\Json\JsonSerializable.cs" />
+    <Compile Include="IO\Json\JsonVector3i.cs" />
     <Compile Include="IO\Json\NewtonsoftJsonExtensions.cs" />
+    <Compile Include="IO\Project\JsonImageProcessTask.cs" />
     <Compile Include="IO\Project\JsonProjectFile.cs" />
     <Compile Include="IO\Project\JsonTextureInitializer.cs" />
     <Compile Include="IO\Project\JsonTexturePixelInitializer.cs" />
@@ -174,6 +177,8 @@
     <Compile Include="FormMain.Designer.cs">
       <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
+    <Compile Include="IO\Project\JsonUniformVariable.cs" />
+    <Compile Include="IO\Project\JsonUniformVariableValue.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Controls\Ctrl_GlobalTextureListView.resx">
