--- a/GIP/GIP.csproj
+++ b/GIP/GIP.csproj
@@ -84,6 +84,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Common\ArrayExtensions.cs" />
+    <Compile Include="Common\BitmapExtensions.cs" />
+    <Compile Include="Common\CMethods.cs" />
     <Compile Include="Common\ComboBoxExtensions.cs" />
     <Compile Include="Common\ControlExtensions.cs" />
     <Compile Include="Common\DisposableObject.cs" />
