--- a/GIP/GIP.csproj
+++ b/GIP/GIP.csproj
@@ -236,10 +236,12 @@
     <Compile Include="IO\Json\Converter\JsonTexturePixelInitializerConverter.cs" />
     <Compile Include="IO\Json\Converter\JsonUniformVariableValueConverter.cs" />
     <Compile Include="IO\Json\Converter\JsonVariableConverter.cs" />
+    <Compile Include="IO\Json\JsonColorRGBA.cs" />
     <Compile Include="IO\Json\JsonSerializable.cs" />
     <Compile Include="IO\Json\JsonVector3i.cs" />
     <Compile Include="IO\Json\NewtonsoftJsonExtensions.cs" />
     <Compile Include="IO\Project\JsonImageProcessTask.cs" />
+    <Compile Include="IO\Project\JsonProcessTask.cs" />
     <Compile Include="IO\Project\JsonProjectFile.cs" />
     <Compile Include="IO\Project\JsonTextureInitializer.cs" />
     <Compile Include="IO\Project\JsonTexturePixelInitializer.cs" />
