--- a/GIP/GIP.csproj
+++ b/GIP/GIP.csproj
@@ -233,16 +233,19 @@
     <Compile Include="Core\Variables\VariableBase.cs" />
     <Compile Include="Core\Variables\VariableList.cs" />
     <Compile Include="IO\Json\Converter\JsonConverter.cs" />
+    <Compile Include="IO\Json\Converter\JsonProcessTaskConverter.cs" />
+    <Compile Include="IO\Json\Converter\JsonShaderSourceConverter.cs" />
     <Compile Include="IO\Json\Converter\JsonTexturePixelInitializerConverter.cs" />
     <Compile Include="IO\Json\Converter\JsonUniformVariableValueConverter.cs" />
     <Compile Include="IO\Json\Converter\JsonVariableConverter.cs" />
     <Compile Include="IO\Json\JsonColorRGBA.cs" />
+    <Compile Include="IO\Json\JsonDataObject.cs" />
     <Compile Include="IO\Json\JsonSerializable.cs" />
     <Compile Include="IO\Json\JsonVector3i.cs" />
     <Compile Include="IO\Json\NewtonsoftJsonExtensions.cs" />
-    <Compile Include="IO\Project\JsonImageProcessTask.cs" />
     <Compile Include="IO\Project\JsonProcessTask.cs" />
     <Compile Include="IO\Project\JsonProjectFile.cs" />
+    <Compile Include="IO\Project\JsonShaderSource.cs" />
     <Compile Include="IO\Project\JsonTextureInitializer.cs" />
     <Compile Include="IO\Project\JsonTexturePixelInitializer.cs" />
     <Compile Include="Core\ShaderResources.cs" />
