Change structures about shaders in project file.

--- a/GIP/GIP.csproj
+++ b/GIP/GIP.csproj
@@ -229,24 +229,22 @@
     <Compile Include="Core\ProcessTaskSequence.cs" />
     <Compile Include="Core\ProcessTaskSequenceRunner.cs" />
     <Compile Include="Core\Project.cs" />
-    <Compile Include="Core\ShaderSource.cs" />
-    <Compile Include="Core\ShaderTextSource.cs" />
     <Compile Include="Core\Variables\VariableBase.cs" />
     <Compile Include="Core\Variables\VariableList.cs" />
     <Compile Include="IO\Json\Converter\JsonConverter.cs" />
     <Compile Include="IO\Json\Converter\JsonProcessTaskConverter.cs" />
-    <Compile Include="IO\Json\Converter\JsonShaderSourceConverter.cs" />
     <Compile Include="IO\Json\Converter\JsonTexturePixelInitializerConverter.cs" />
     <Compile Include="IO\Json\Converter\JsonUniformVariableValueConverter.cs" />
     <Compile Include="IO\Json\Converter\JsonVariableConverter.cs" />
     <Compile Include="IO\Json\JsonColorRGBA.cs" />
     <Compile Include="IO\Json\JsonDataObject.cs" />
+    <Compile Include="IO\Json\JsonDataReadBuffer.cs" />
     <Compile Include="IO\Json\JsonSerializable.cs" />
     <Compile Include="IO\Json\JsonVector3i.cs" />
     <Compile Include="IO\Json\NewtonsoftJsonExtensions.cs" />
+    <Compile Include="IO\Project\JsonComputeShader.cs" />
     <Compile Include="IO\Project\JsonProcessTask.cs" />
     <Compile Include="IO\Project\JsonProjectFile.cs" />
-    <Compile Include="IO\Project\JsonShaderSource.cs" />
     <Compile Include="IO\Project\JsonTextureInitializer.cs" />
     <Compile Include="IO\Project\JsonTexturePixelInitializer.cs" />
     <Compile Include="Core\TexturePixelInitializer.cs" />
