--- a/GIP/packages.config
+++ b/GIP/packages.config
@@ -4,8 +4,8 @@
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="OpenTK" version="3.1.0" targetFramework="net472" />
   <package id="OpenTK.GLControl" version="3.1.0" targetFramework="net472" />
-  <package id="ReactiveProperty" version="7.0.0-ci20200503102823" targetFramework="net472" />
-  <package id="ReactiveProperty.Core" version="7.0.0-ci20200503102823" targetFramework="net472" />
+  <package id="ReactiveProperty" version="7.2.1" targetFramework="net472" />
+  <package id="ReactiveProperty.Core" version="7.2.1" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net472" />
   <package id="System.Reactive" version="4.4.1" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net472" />
