--- a/GIP/GIP.csproj
+++ b/GIP/GIP.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CommandLine, Version=2.9.0.0, Culture=neutral, PublicKeyToken=5a870481e358d379, processorArchitecture=MSIL">
+      <HintPath>..\packages\CommandLineParser.2.9.0-preview1\lib\net461\CommandLine.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -83,18 +86,19 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Common\ArrayExtensions.cs" />
-    <Compile Include="Common\BitmapExtensions.cs" />
+    <Compile Include="Arguments.cs" />
+    <Compile Include="Common\Extensions\ArrayExtensions.cs" />
+    <Compile Include="Common\Extensions\BitmapExtensions.cs" />
     <Compile Include="Common\CMethods.cs" />
-    <Compile Include="Common\ComboBoxExtensions.cs" />
-    <Compile Include="Common\ControlExtensions.cs" />
+    <Compile Include="Common\Extensions\ComboBoxExtensions.cs" />
+    <Compile Include="Common\Extensions\ControlExtensions.cs" />
     <Compile Include="Common\DisposableObject.cs" />
-    <Compile Include="Common\DockPanelSuiteExtensions.cs" />
+    <Compile Include="Common\Extensions\DockPanelSuiteExtensions.cs" />
     <Compile Include="Common\Exception.cs" />
     <Compile Include="Common\FileModificationMonitor.cs" />
     <Compile Include="Common\GLDisposable.cs" />
-    <Compile Include="Common\ListViewExtensions.cs" />
-    <Compile Include="Common\StringExtensions.cs" />
+    <Compile Include="Common\Extensions\ListViewExtensions.cs" />
+    <Compile Include="Common\Extensions\StringExtensions.cs" />
     <Compile Include="Controls\ComputeShaderCodeBox.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -269,7 +273,8 @@
     <Compile Include="IO\Project\JsonUniformVariable.cs" />
     <Compile Include="IO\Project\JsonUniformVariableValue.cs" />
     <Compile Include="IO\Project\JsonVariable.cs" />
-    <Compile Include="Logger.cs" />
+    <Compile Include="Logger\FileLogger.cs" />
+    <Compile Include="Logger\Logger.cs" />
     <Compile Include="MainFormEventBridge.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
