--- a/GIP/GIP.csproj
+++ b/GIP/GIP.csproj
@@ -232,6 +232,7 @@
       <DependentUpon>Ctrl_VariableValueView.cs</DependentUpon>
     </Compile>
     <Compile Include="Core\ComputeShader.cs" />
+    <Compile Include="Core\ProjectsRunner.cs" />
     <Compile Include="Core\Tasks\ComputeTask.cs" />
     <Compile Include="Core\DataObjectBase.cs" />
     <Compile Include="Core\Tasks\ProcessTask.cs" />
