--- a/GIP/GIP.csproj
+++ b/GIP/GIP.csproj
@@ -276,6 +276,9 @@
       <DependentUpon>Ctrl_VariableValueView.cs</DependentUpon>
     </Compile>
     <Compile Include="Core\ComputeShader.cs" />
+    <Compile Include="Core\Condition\ComparisonOperator.cs" />
+    <Compile Include="Core\Condition\ConditionBase.cs" />
+    <Compile Include="Core\Condition\NumericComparisonCondition.cs" />
     <Compile Include="Core\NumericSource.cs" />
     <Compile Include="Core\ProjectsRunner.cs" />
     <Compile Include="Core\Tasks\ComputeTask.cs" />
@@ -284,6 +287,7 @@
     <Compile Include="Core\Tasks\ProcessTaskSequence.cs" />
     <Compile Include="Core\ProcessTaskSequenceRunner.cs" />
     <Compile Include="Core\Project.cs" />
+    <Compile Include="Core\Tasks\ProcessTaskSequenceLoop.cs" />
     <Compile Include="Core\Tasks\TextureExportTask.cs" />
     <Compile Include="Core\Variables\VariableBase.cs" />
     <Compile Include="Core\Variables\VariableList.cs" />
@@ -299,6 +303,7 @@
     <Compile Include="IO\Json\JsonVector3i.cs" />
     <Compile Include="IO\Json\NewtonsoftJsonExtensions.cs" />
     <Compile Include="IO\Project\JsonComputeShader.cs" />
+    <Compile Include="IO\Project\JsonNumericComparisonCondition.cs" />
     <Compile Include="IO\Project\JsonProcessTask.cs" />
     <Compile Include="IO\Project\JsonProjectFile.cs" />
     <Compile Include="IO\Project\JsonTextureInitializer.cs" />
