--- a/GIP/GIP.csproj
+++ b/GIP/GIP.csproj
@@ -155,6 +155,12 @@
     <Compile Include="Controls\ProcessTaskEditor\Ctrl_ComputeTaskEditor.Designer.cs">
       <DependentUpon>Ctrl_ComputeTaskEditor.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controls\ProcessTaskEditor\Ctrl_CountingForLoopTaskEditor.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Controls\ProcessTaskEditor\Ctrl_CountingForLoopTaskEditor.Designer.cs">
+      <DependentUpon>Ctrl_CountingForLoopTaskEditor.cs</DependentUpon>
+    </Compile>
     <Compile Include="Controls\ProcessTaskEditor\Ctrl_ProcessTaskEditor.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -331,6 +337,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Controls\ProcessTaskEditor\Ctrl_ComputeTaskEditor.resx">
       <DependentUpon>Ctrl_ComputeTaskEditor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Controls\ProcessTaskEditor\Ctrl_CountingForLoopTaskEditor.resx">
+      <DependentUpon>Ctrl_CountingForLoopTaskEditor.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Controls\ProcessTaskEditor\Ctrl_ProcessTaskEditor.resx">
       <DependentUpon>Ctrl_ProcessTaskEditor.cs</DependentUpon>
