--- a/GIP/GIP.csproj
+++ b/GIP/GIP.csproj
@@ -80,6 +80,9 @@
     <Reference Include="CommandLine, Version=2.9.0.0, Culture=neutral, PublicKeyToken=5a870481e358d379, processorArchitecture=MSIL">
       <HintPath>..\packages\CommandLineParser.2.9.0-preview1\lib\net461\CommandLine.dll</HintPath>
     </Reference>
+    <Reference Include="ICSharpCode.AvalonEdit, Version=6.0.1.278, Culture=neutral, PublicKeyToken=9cc39be672370310, processorArchitecture=MSIL">
+      <HintPath>..\packages\AvalonEdit.6.0.1\lib\net45\ICSharpCode.AvalonEdit.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="Microsoft.WindowsAPICodePack, Version=1.1.2.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\WindowsAPICodePack-Core.1.1.2\lib\Microsoft.WindowsAPICodePack.dll</HintPath>
@@ -96,6 +99,8 @@
     <Reference Include="OpenTK.GLControl, Version=3.1.0.0, Culture=neutral, PublicKeyToken=bad199fe84eb3df4, processorArchitecture=MSIL">
       <HintPath>..\packages\OpenTK.GLControl.3.1.0\lib\net20\OpenTK.GLControl.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="ReactiveProperty, Version=7.5.0.0, Culture=neutral, PublicKeyToken=910d1732782c71cb, processorArchitecture=MSIL">
       <HintPath>..\packages\ReactiveProperty.7.5.0\lib\netstandard2.0\ReactiveProperty.dll</HintPath>
     </Reference>
@@ -122,6 +127,7 @@
       <HintPath>..\packages\System.ValueTuple.4.5.0\lib\net47\System.ValueTuple.dll</HintPath>
     </Reference>
     <Reference Include="System.Windows" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -131,10 +137,12 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="UIAutomationProvider" />
     <Reference Include="WeifenLuo.WinFormsUI.Docking, Version=3.0.6.0, Culture=neutral, PublicKeyToken=5cded1a1a0a7b481, processorArchitecture=MSIL">
       <HintPath>..\packages\DockPanelSuite.3.0.6\lib\net40\WeifenLuo.WinFormsUI.Docking.dll</HintPath>
     </Reference>
     <Reference Include="WindowsBase" />
+    <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Arguments.cs" />
@@ -146,16 +154,26 @@
     <Compile Include="Common\DisposableObject.cs" />
     <Compile Include="Common\Extensions\DockPanelSuiteExtensions.cs" />
     <Compile Include="Common\Exception.cs" />
+    <Compile Include="Common\ExternalNamedAttribute.cs" />
     <Compile Include="Common\PathExistenceWatcher.cs" />
     <Compile Include="Common\GLDisposable.cs" />
     <Compile Include="Common\Extensions\ListViewExtensions.cs" />
     <Compile Include="Common\Extensions\StringExtensions.cs" />
-    <Compile Include="Controls\ComputeShaderCodeBox.cs">
-      <SubType>Component</SubType>
+    <Compile Include="Controls\AvalonTextEditor.xaml.cs">
+      <DependentUpon>AvalonTextEditor.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Controls\ComputeShaderCodeBox.Designer.cs">
-      <DependentUpon>ComputeShaderCodeBox.cs</DependentUpon>
+    <Compile Include="Controls\Ctrl_ComputeShaderCodeEditor.cs">
+      <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="Controls\Ctrl_ComputeShaderCodeEditor.Designer.cs">
+      <DependentUpon>Ctrl_ComputeShaderCodeEditor.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\GlslSyntax\GlslSyntaxHighlightingDefinition.cs" />
+    <Compile Include="Controls\GlslSyntax\GlslSyntaxHighlightingMainSpans.cs" />
+    <Compile Include="Controls\GlslSyntax\GlslSyntaxHighlightingNamedColor.cs" />
+    <Compile Include="Controls\GlslSyntax\GlslSyntaxHighlightingMainRules.cs" />
+    <Compile Include="Controls\GlslSyntax\GlslSyntaxKeywordType.cs" />
+    <Compile Include="Controls\GlslSyntax\SyntaxHighlightingBrush.cs" />
     <Compile Include="Controls\ProcessTaskEditor\Ctrl_ComputeTaskEditor.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -346,6 +364,9 @@
     <Compile Include="MainFormEventBridge.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Controls\Ctrl_ComputeShaderCodeEditor.resx">
+      <DependentUpon>Ctrl_ComputeShaderCodeEditor.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Controls\ProcessTaskEditor\Ctrl_ComputeTaskEditor.resx">
       <DependentUpon>Ctrl_ComputeTaskEditor.cs</DependentUpon>
     </EmbeddedResource>
@@ -439,6 +460,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\DefaultLayout.json.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="Controls\AvalonTextEditor.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
